[gd_scene load_steps=5 format=3 uid="uid://ud1gq47n7cng"]

[ext_resource type="Script" path="res://scenes/menu/CharacterViewer.gd" id="1_be571"]
[ext_resource type="Texture2D" uid="uid://bdwa7bo5uyir3" path="res://assets/borders/borderWood.png" id="2_ntnau"]
[ext_resource type="SpriteFrames" uid="uid://3pg5717b1xwl" path="res://resources/spriteFrames/dude.tres" id="3_lexyy"]
[ext_resource type="Theme" uid="uid://dr1rrqqcsrtxk" path="res://resources/menuTheme.tres" id="4_wtdqi"]

[node name="CharacterViewer" type="Control"]
custom_minimum_size = Vector2(520, 220)
layout_mode = 3
anchors_preset = 0
offset_right = 460.0
offset_bottom = 200.0
script = ExtResource("1_be571")

[node name="Border" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(520, 220)
layout_mode = 0
offset_right = 460.0
offset_bottom = 200.0
texture = ExtResource("2_ntnau")
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="CharacterData" type="Control" parent="Border"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite" type="AnimatedSprite2D" parent="Border/CharacterData"]
position = Vector2(87, 190)
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_lexyy")
animation = &"idle"

[node name="StatsLabel" type="Label" parent="Border/CharacterData"]
layout_mode = 0
offset_left = 191.0
offset_top = 30.0
offset_right = 251.0
offset_bottom = 50.0
theme = ExtResource("4_wtdqi")
text = "STATS"

[node name="CharacterName" type="Label" parent="Border/CharacterData"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 0
offset_left = 25.0
offset_top = 30.0
offset_right = 171.0
offset_bottom = 50.0
theme = ExtResource("4_wtdqi")
text = "MEREQUETENGUE
"
horizontal_alignment = 1

[node name="AbilitiesLabel" type="Label" parent="Border/CharacterData"]
layout_mode = 0
offset_left = 321.0
offset_top = 30.0
offset_right = 407.0
offset_bottom = 50.0
theme = ExtResource("4_wtdqi")
text = "ABILITIES"

[node name="StatsName" type="Label" parent="Border/CharacterData"]
layout_mode = 0
offset_left = 181.0
offset_top = 60.0
offset_right = 221.0
offset_bottom = 159.0
theme = ExtResource("4_wtdqi")
text = "HP:

NRG:

ATK:

DFN:

SPD:"

[node name="StatsValues" type="Label" parent="Border/CharacterData"]
layout_mode = 0
offset_left = 231.0
offset_top = 60.0
offset_right = 271.0
offset_bottom = 159.0
theme = ExtResource("4_wtdqi")
text = "10

10

10

10

10"

[node name="AbilitiesValues" type="Label" parent="Border/CharacterData"]
layout_mode = 0
offset_left = 296.0
offset_top = 60.0
offset_right = 476.0
offset_bottom = 159.0
theme = ExtResource("4_wtdqi")
text = "10

10

10

10

10"
